fix(cover): letter and word spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -97,12 +97,13 @@
   padding: 0 50px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
   font-size: 100px;
   font-weight: 700;
   letter-spacing: 30px;
   text-transform: uppercase;
 }
+
 
 .cover__description {
   padding: 0 50px 50px;
@@ -121,7 +122,7 @@
 
 .cover__description-text {
   /* before: 2cap, safari not support cap value */
-  word-spacing: 0.5em;
+  word-spacing: 0.8em;
 }
 
 .aligned-text_center {
